Fixed wrap architecture #1

--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body {
 
 .sites {
     padding-top: 2rem;
+    padding-left: 4rem;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
